...
class _ChordPageState extends State<ChordPage> {
  int showad = 0;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: ValueKey("chord_page"),
      body: SafeArea(
        child: ListView(
          physics: AlwaysScrollableScrollPhysics(),
          children: [
            Padding(
              padding: EdgeInsets.fromLTRB(16, 16, 16, 4),
              child: ButtonCard(
                key: ValueKey("chord_detail_button"),
                icon: Icon(
                  CustomIcons.MyFlutterApp.prog,
                  size: 48,
                  color: Colors.green,
                ),
                onPressed: () async {
...
