...
              ),
              label: "",
            ),
            BottomNavigationBarItem(
              icon: Icon(
                CustomIcons.MyFlutterApp.prog,
                key: ValueKey("bottom_navbar_chord_page"),
              ),
              label: "",
            ),
            BottomNavigationBarItem(
              icon: Icon(
                CustomIcons.MyFlutterApp.international_music,
...
